# py-tree-sitter-languages

./: .gitignore  README.rst  _old_setup.py  build.py  pyproject.toml  repos.txt  setup.py
.github/workflows/: release.yml
tests/: test_tree_sitter_languages.py
textual_tree_sitter_languages/: __init__.py
tree_sitter_languages/: __init__.py
